--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Prependage</groupId>
-  <artifactId>Prependage</artifactId>
+  <groupId>TransferWeddingVideos</groupId>
+  <artifactId>TransferWeddingVideos</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Prependage</name>
+  <name>TransferWeddingVideos</name>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -14,6 +14,35 @@
           <release>10</release>
         </configuration>
       </plugin>
+    <!-- Maven Assembly Plugin -->
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<version>2.4.1</version>
+		<configuration>
+			<!-- get all project dependencies -->
+			<descriptorRefs>
+				<descriptorRef>jar-with-dependencies</descriptorRef>
+			</descriptorRefs>
+			<!-- MainClass in mainfest make a executable jar -->
+			<archive>
+			  <manifest>
+				<mainClass>main.main</mainClass>
+			  </manifest>
+			</archive>
+
+		</configuration>
+		<executions>
+		  <execution>
+			<id>make-assembly</id>
+                                      <!-- bind to the packaging phase -->
+			<phase>package</phase> 
+			<goals>
+				<goal>single</goal>
+			</goals>
+		  </execution>
+		</executions>
+	</plugin>
     </plugins>
   </build>
   <dependencies>
